--- a/main.css
+++ b/main.css
@@ -11,6 +11,9 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
 
 .btn-container {
